// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StackedBarChart /> AmountBasedWithSelection story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-8mrz0y"
        width="360px"
      >
        <div
          class="css-1os0tgf"
          color="#7260ab"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-ev1vfb"
          color="#ad5f99"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-zx48n2"
          color="#c07371"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-10madfl"
          color="#ae945d"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-120lrfw"
          color="#94af66"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-5jue7b"
          color="#7fc48f"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1vqlngc"
          color="#cabdf1"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-nl045m"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1bin2rj"
            color="#7260ab"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-cs2nmc"
            color="#ad5f99"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1kzrvme"
            color="#c07371"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cfh2un"
            color="#ae945d"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-b6968b"
            color="#94af66"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1xp2461"
            color="#7fc48f"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-ie7wo8"
            color="#cabdf1"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-h7y9mc"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-1qcdcmx"
          />
          <span
            class="css-1sjvubj"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-ncdzc3"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Select All
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-gkrbfh-MuiButtonBase-root-MuiButton-root"
        data-style="minimal"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Clear Selection
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> Default story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-8mrz0y"
        width="360"
      >
        <div
          class="css-jszq69"
          color="#7260ab"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-dgq8tn"
          color="#ad5f99"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-lg2jpp"
          color="#c07371"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-9wlsta"
          color="#ae945d"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-m7cp1x"
          color="#94af66"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1boeiq6"
          color="#7fc48f"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-zys4mx"
          color="#cabdf1"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1bin2rj"
            color="#7260ab"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-cs2nmc"
            color="#ad5f99"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1kzrvme"
            color="#c07371"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cfh2un"
            color="#ae945d"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-b6968b"
            color="#94af66"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1xp2461"
            color="#7fc48f"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-ie7wo8"
            color="#cabdf1"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StackedBarChart /> WithSelection story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-8mrz0y"
        width="360px"
      >
        <div
          class="css-jszq69"
          color="#7260ab"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-dgq8tn"
          color="#ad5f99"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-lg2jpp"
          color="#c07371"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-9wlsta"
          color="#ae945d"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-m7cp1x"
          color="#94af66"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1boeiq6"
          color="#7fc48f"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-zys4mx"
          color="#cabdf1"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1bin2rj"
            color="#7260ab"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-cs2nmc"
            color="#ad5f99"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1kzrvme"
            color="#c07371"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cfh2un"
            color="#ae945d"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-b6968b"
            color="#94af66"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1xp2461"
            color="#7fc48f"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-ie7wo8"
            color="#cabdf1"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Select All
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-gkrbfh-MuiButtonBase-root-MuiButton-root"
        data-style="minimal"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Clear Selection
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap;"
    />
  </div>
</div>
`;
